--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,11 @@
             <artifactId>netty-all</artifactId>
             <version>4.0.35.Final</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.18.2-GA</version>
+        </dependency>
     </dependencies>
 
 </project>
